# rpg_api/models/battle_report.py
@@ -5,7 +5,7 @@ import datetime
 import uuid
 
 class Battle_report(database.Model, peewee_signals.Model):
-    id = peewee.UUIDField(unique=True, default=uuid.uuid4)
+    br_id = peewee.UUIDField(unique=True, default=uuid.uuid4)
     user = peewee.ForeignKeyField(User, backref='battle_reports')
     start_date = peewee.DateTimeField(default=datetime.datetime.now)
     end_date = peewee.DateTimeField()
@@ -20,5 +20,22 @@ class Battle_report(database.Model, peewee_signals.Model):
     def __unicode__(self):
         return self.name
 
+
+    def to_dict(self):
+        if not hasattr(self, 'lootboxes'):
+            self.lootboxes = []
+        if not hasattr(self, 'first_opening'):
+            self.first_opening = False
+        return {
+            "id": self.br_id,
+            "start_date": self.start_date,
+            "end_date": self.end_date,
+            "full_report_id": self.full_report,
+            "fleeing": self.is_fleeing,
+            "health": self.health,
+            "money": self.money,
+            "lootboxes": self.lootboxes,
+            "first_opening": self.first_opening
+        }
     class Meta:
         db_table = "battle_report"
